kubernetes/apps/hydra/umami/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: umami
  labels:
    pod-security.kubernetes.io/enforce: restricted
