kubernetes/apps/hydra/umami/statefulset-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
spec:
  serviceName: db
  selector:
    matchLabels:
      app: db
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres
        image: postgres:17.5 # No image policy set, to prevent major updates from breaking things
        ports:
        - containerPort: 5432
          livenessProbe:
            initialDelaySeconds: 30
            exec:
              command: ["pg_isready"]

        volumeMounts:
        - name: db-data
          mountPath: "/var/lib/postgresql/data"

  volumeClaimTemplates:
  - metadata:
      name: db-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "longhorn"
      resources:
        requests:
          storage: 1Gi
