kubernetes/apps/hydra/umami/statefulset-mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: mysql
  selector:
    matchLabels:
      app: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        # mysql9 doesn't seem to be supported by umami yet.
        # Error: Unable to connect to the database: Error querying the database: Unknown authentication plugin `sha256_password'.
        # In the umami docs it says mysql 8 is supported though.
        image: mysql:8.4.5 # TODO change from latest and add image update policy
        ports:
        - containerPort: 3306
        livenessProbe:
          exec:
            command: ["mysqladmin", "ping"]
          initialDelaySeconds: 5

        volumeMounts:
        - name: mysql-data
          mountPath: "/var/lib/mysql"

  volumeClaimTemplates:
  - metadata:
      name: mysql-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "longhorn"
      resources:
        requests:
          storage: 10Gi
