kubernetes/apps/hydra/umami/statefulset-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
spec:
  serviceName: db
  selector:
    matchLabels:
      app: db
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres
        image: postgres:17.5 # TODO change from latest and add image update policy
        ports:
        - containerPort: 5432
        # TODO add liveness probe
        # livenessProbe:
        #   exec:
        #     command: ["mysqladmin", "ping"]
        #   initialDelaySeconds: 5

        volumeMounts:
        - name: db-data
          mountPath: "/var/lib/postgresql/data"

  volumeClaimTemplates:
  - metadata:
      name: db-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "longhorn"
      resources:
        requests:
          storage: 10Gi
