kubernetes/apps/hydra/umami/statefulset-umami.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: umami
  namespace: umami
spec:
  serviceName: umami
  selector:
    matchLabels:
      app: umami
  replicas: 1
  template:
    metadata:
      labels:
        app: umami
      annotations:
        kubernetes.io/egress-bandwidth: "5M"
        kubernetes.io/ingress-bandwidth: "10M"
    spec:
      containers:
      - name: umami
        image: ghcr.io/umami-software/umami:postgresql-v2.20.2 # {"$imagepolicy": "umami:umami"}
        ports:
        - containerPort: 3000
          livenessProbe:
            initialDelaySeconds: 30
            httpGet:
              path: /api/heartbeat
              port: 3000
