kubernetes/apps/hydra/umami/httpRoute-https.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: analytics-thetillhoff-de-https
spec:
  parentRefs:
  - name: https-gateway-thetillhoff-de
    namespace: gateways
  hostnames:
  - analytics.thetillhoff.de
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: umami
      port: 80
